# ODPlatform

./: .gitignore  .odp-workspace  1  README.md  pyproject.toml  requirements-dev.txt  t(d3) 阶段10&11 - 补齐智能切分单元测试，交付 ADR 0003 数据准备流水线架构设计文档
.claude/: settings.local.json
apps/platform/: README.md  pyproject.toml
apps/platform/configs/: README.md
apps/platform/configs/datasets/: rsod.yaml
apps/platform/configs/runtime/: train.yaml
apps/platform/docs/: README.md
apps/platform/docs/adr/: ADR-005-runtime-configuration.md
apps/platform/src/odp_platform/: __init__.py  _version.py
apps/platform/src/odp_platform/cli/: gen_runtime_config.py  init_project.py  predict_model.py  reset_project.py  train_model.py  transform_data.py  val_model.py  validate_data.py
apps/platform/src/odp_platform/common/: config_log.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  provenance_adapter.py  result.py  string_utils.py  system_utils.py
apps/platform/tests/: test_splitter.py
apps/platform/tests/cli/: test_train_model.py
apps/platform/tests/data_validation/: conftest.py  test_checks_yaml_schema.py  test_registry.py
apps/platform/tests/evaluation/: test_archive.py  test_val_build.py
apps/platform/tests/frame_source/: test_factory.py
apps/platform/tests/inference/: test_infer_build.py  test_service.py
apps/platform/tests/logging/: test_logging.py
apps/platform/tests/runtime_config/: test_generator.py  test_loaders.py  test_runtime_config.py  test_yolo_config.py
apps/platform/tests/training/: test_train_build.py
(+115 files in other folders)
