[project]
name = "odp-platform"
version = "0.1.0"
description = "ODPlatform Platform Management System"
readme = "README.md"
requires-python = ">=3.10"

# 1. 系统底层与 D3 阶段所需的全部依赖大件（合并在一个列表里）
dependencies = [
    "click>=8.0",
    "scikit-learn>=1.0",
    "ultralytics>=8.0",
    "pyyaml>=6.0",
    "pillow>=9.0",
]

# 2. 挂载我们平台的三个核心入口点命令（完美并存）
[project.scripts]
odp-init = "odp_platform.cli.init_project:main"
odp-reset = "odp_platform.cli.reset_project:main"
odp-transform = "odp_platform.cli.transform_data:main"
odp-validate = "odp_platform.cli.validate_data:main"